# SOC-Log-Analyzer

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: config.py  db.py  main.py  schemas.py  service.py
app/api/: routes.py
app/detection/: engine.py
app/parsers/: base.py  linux_auth.py  windows_evtx.py  windows_json.py
docs/: architecture.md  detection-rules.md
samples/: windows_events.json
scripts/: export_windows_events.ps1
tests/: conftest.py  test_api.py  test_detection_engine.py  test_linux_parser.py  test_windows_parser.py
